# primitive_fitter

./: CMakeLists.txt  package.xml
include/nimbro_primitive_fitter/: inertia.h  primitive_fitter.h  util.h
launch/: capsule_ur10.launch.py
src/: inertia.cpp  main.cpp  primitive_fitter.cpp
