<?xml version="1.0"?>
<package>
  <name>nimbro_primitive_fitter</name>
  <version>0.1.0</version>
  <description>This package fits primitive shapes to complex meshes to reduce computational complexity in simulation and planning tasks.</description>

  <maintainer email="brandenburger@dismail.de">André Brandenburger</maintainer>
  <maintainer email="rodriguez@ais.uni-bonn.de">Diego Rodriguez</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>roboptim-capsule</build_depend>
  
  <run_depend>rclcpp</run_depend>
  <run_depend>roboptim-capsule</run_depend>

</package>
