<?xml version="1.0"?>
<package format="3">
  <name>nimbro_primitive_fitter</name>
  <version>0.1.0</version>
  <description>This package fits primitive shapes to complex meshes to reduce computational complexity in simulation and planning tasks.</description>

  <maintainer email="brandenburger@dismail.de">André Brandenburger</maintainer>
  <maintainer email="rodriguez@ais.uni-bonn.de">Diego Rodriguez</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>libpugixml-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>roboptim-capsule</build_depend>
  
  <exec_depend>libpugixml-dev</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>roboptim-capsule</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
